Fixed user view problem with collapsing bot container.

--- a/public/less/profile.less
+++ b/public/less/profile.less
@@ -319,11 +319,12 @@
 }
 /* comrade area */
 .profile .bot_container {
-  padding: 15px 15px 15px 15px;
-  overflow: hidden;
-  border-top: 1px solid #A5C0C8;
+  padding: 12px;
   margin: 0;
+  overflow: hidden;
   text-align: center;
+  border-top: 1px solid #A5C0C8;
+  min-height: 46px;
 }
 .profile .bot_container > *{
   padding: 3px 3px;
